Fix chat input line height Fix preloader overflow

--- a/src/scss/partials/_chat.scss
+++ b/src/scss/partials/_chat.scss
@@ -116,10 +116,11 @@ $chat-helper-size: 39px;
 		background: none;
 		border: none;
 		width: 100%;
-		padding: .6875rem .5625rem;
+		padding: 0 .5625rem;
 		/* height: 100%; */
+		margin-top: -1px;
 		max-height: calc(30rem - 2.5rem); // 2.5rem - input helper (reply)
-		min-height: inherit;
+		//min-height: inherit;
 		overflow-y: none;
 		resize: none;
 		border: none;
@@ -832,6 +833,8 @@ $chat-helper-size: 39px;
 		overflow: hidden;
 		align-self: center;
 		min-height: calc(var(--chat-input-size) - var(--padding-vertical) * 2);
+		display: flex;
+		align-items: center;
 
 		> .scrollable {
 			position: relative;
